@@ -1,3 +1,8 @@
+2003-07-31    Ping Cheng <pingc@wacom.com>
+	* Added "Left Double Click" and "Ignore Button Event" commands into xsetwacom
+	* Set Mode default values: 	cursor - relative
+					stylus/eraser - absolute
+
 2003-07-24    Ping Cheng <pingc@wacom.com>
 	* Added new xsetwacom commands (Mode, SpeedLevel, and ClickForce)
 
